padding added in home section to avoid overlapping

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -36,6 +36,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr) ;
     position: relative;
+    padding-top: 100px;
 }
 #home div:first-child{
     bottom: 100px;
